testsuite/escript/errors/errors010-reserved-word-syntax-error.src
var is := 1;
print("the value is " + is);
